@@ -1,6 +1,6 @@
 This is NSD contributions directory and it contains various additions
 to NSD that are not a part of the official distribution but may be
-helpfull.
+helpful.
 
 USE AT YOUR OWN RISK.
 
