@@ -242,7 +242,6 @@ int dname_parse_wire(uint8_t* dname, const char* name)
 		*h = label_length;
 		h = p;
 	}
-
 	/* Add root label.  */
 	*h = 0;
 
@@ -494,4 +493,3 @@ dname_replace(region_type* region,
 	assert(dname_is_subdomain(res, dest));
 	return res;
 }
-
