@@ -961,7 +961,7 @@ NSD Version 3.0. and above
    RFC 1995 (IXFR) support only for making requests to other servers.
   		- IXFR is not served.
 
-  Secondary zones: - follows SOA timers. (NSD 2 and before did not) 
+   Secondary zones: - follows SOA timers. (NSD 2 and before did not) 
   		(RFC 1034, 1035).
 
 Not implemented:
