@@ -294,7 +294,6 @@ rrtype_to_token(const char *word, uint16_t *type)
 	return 0;
 }
 
-
 /*
  * Remove \DDD constructs from the input. See RFC 1035, section 5.1.
  */
