@@ -21,7 +21,7 @@
 .IR origin ]
 .RB [ \-z
 .IR zonefile ]
-.RB [ \-d
+.RB [ \-f
 .IR database ]
 .SH "DESCRIPTION"
 .LP
